--- a/view.css
+++ b/view.css
@@ -32,7 +32,7 @@ input[type=text], select, textarea {
   resize: vertical;
 }
 
-input[type=submit] {
+.submit
   background-color: #fff;
   color: #000;
   padding: 12px 20px;
@@ -41,8 +41,7 @@ input[type=submit] {
   cursor: pointer;
   width: 200px;
 }
-
-input[type=submit]:hover {
+.submit:hover {
   background-color: #fff;
   color: #000;
 
@@ -56,7 +55,7 @@ input[type=submit]:hover {
   }
 }
 #ans{
-  font-size: 30px;
+  font-size: 13px;
    height: 80px;
    background: linear-gradient(-45deg, #4285f4, #34a853, #fbbc05, #ea4335); 
 }
