--- a/view.css
+++ b/view.css
@@ -55,9 +55,12 @@ input[type=text], select, textarea {
   }
 }
 #ans{
+   padding:5px;
   font-size: 13px;
    height: 80px;
-   background: linear-gradient(-45deg, #4285f4, #34a853, #fbbc05, #ea4335); 
+   background: linear-gradient(-45deg, #4285f4, #34a853, #fbbc05, #ea4335);
+   
+ 
 }
 .body {
   max-width: 700px;
