--- a/view.css
+++ b/view.css
@@ -55,7 +55,7 @@ input[type=text], select, textarea {
   }
 }
 #ans{
-   padding:5px;
+   margin-top:5px;
   font-size: 13px;
    height: 80px;
    background: linear-gradient(-45deg, #4285f4, #34a853, #fbbc05, #ea4335);
